charts/mediaserver/plex/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex
  labels:
    app: plex
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  selector:
    matchLabels:
      app: plex
  serviceName: plex-headless
  template:
    metadata:
      labels:
        app: plex
      annotations:
        k8up.io/backupcommand: >-
          sh -c 'tar -czf - "/config/Library/Application Support/Plex Media Server/" | cat'
        k8up.io/file-extension: .tar.gz
    spec:
      volumes:
        - name: mediaserver-volume
          hostPath:
            path: /mnt/media
        - name: transcode
          emptyDir: {}
      hostNetwork: true
      containers:
        - name: plex
          image: "docker.io/linuxserver/plex:1.43.0"
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              path: /identity
              port: 32400
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /identity
              port: 32400
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /identity
              port: 32400
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 2
          ports:
            - name: plex-port
              containerPort: 32400
              protocol: TCP
          volumeMounts:
            - name: mediaserver-volume
              mountPath: /config
              subPath: "config/plex"
            - name: mediaserver-volume
              mountPath: /movies
              subPath: "media/movies"
            - name: mediaserver-volume
              mountPath: /tv
              subPath: "media/tv"
            - mountPath: /anime
              name: mediaserver-volume
              subPath: media/anime
            - name: transcode
              mountPath: /transcode
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              nvidia.com/gpu: 1
