charts/mediaserver/plex/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  labels:
    app: plex
spec:
  ports:
    - port: 32400
      targetPort: 32400
      protocol: TCP
      name: plex-port
  selector:
    app: plex
