charts/mediaserver/plex/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - plex.int.imdevinc.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: plex
          namespace: mediaserver
          port: 32400
